# codex-azazel

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_AUDIT.md  FEATURE_PROPOSALS.md  FIXES.md  LICENSE  PROPOSED_FEATURES_HOOKS_AND_EXTENSIONS.md  PROPOSED_FEATURES_SUMMARY.md  README.md  cli.py  dev_cli.py  hydrate_missing_fields.py  pyproject.toml  start.ps1  test_output.txt  test_output_final.txt  test_output_final_2.txt  validate_schema_hydration.py
bce/: __init__.py  api.py  bibles.py  cache.py  changelog.py  claim_graph.py  cli.py  config.py  conflicts_enhanced.py  contradictions.py  curation_cli.py  dossier_types.py  dossiers.py  exceptions.py  export.py  export_citations.py  export_csv.py  export_graph.py  export_json.py  export_markdown.py  hooks.py  models.py  plugins.py  queries.py  relationship_types.py  schema.py  search.py  server.py  services.py  sources.py  storage.py  validation.py
docs/: AI_FEATURES.md  AI_FEATURES_PROPOSAL.md  AI_FEATURES_QUICK_REF.md  DATA_ENTRY_GUIDE.md  HOOKS_AND_PLUGINS.md  ROADMAP.md  SCHEMA.md  azazel_case_study.md  evidence_card_azazel.md  features.md
examples/: basic_usage.py  print_dossier_markdown.py
frontend/: README.md  character.html  characters.html  event.html  events.html  graph.html  index.html
plugins/: changelog.py  graph_viz.py  quality_scorer.py
scripts/: migrate_relationships.py  validate_data.py
tests/: test_ai_advanced_features.py  test_ai_api_disabled_behavior.py  test_ai_cache_and_embeddings.py  test_ai_clustering.py  test_ai_completeness.py  test_ai_conflict_analysis.py  test_ai_curation_workflows.py  test_ai_event_reconstruction.py  test_ai_extended_features.py  test_ai_foundation.py  test_ai_models_core.py  test_ai_parallel_detection.py  test_ai_qa_pipeline.py  test_ai_question_answering.py  test_ai_relationship_inference.py  test_ai_semantic_contradictions.py  test_ai_semantic_plan.py  test_ai_semantic_search.py  test_ai_source_analysis.py  test_ai_summaries.py  test_ai_trait_extraction.py  test_ai_validation_assistant.py  test_api.py  test_api_extended.py  test_basic.py  test_bibles.py  test_cache.py  test_claim_graph.py  test_cli.py  test_config.py  test_contradictions.py  (+35 more)
(+124 files in other folders)
