[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-azazel"
version = "0.1.0"
description = "Codex Azazel - BCE (Biblical Character / Before Canon Engine)"
authors = [{ name = "Codex Azazel" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
ai = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]
ai-openai = ["openai>=1.0.0"]
ai-anthropic = ["anthropic>=0.20.0"]

[project.scripts]
bce = "bce.cli:main"

[tool.hatch.build]
packages = ["bce"]
