[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-azazel"
version = "0.1.0"
description = "Codex Azazel - BCE (Biblical Character / Before Canon Engine)"
authors = [{ name = "Codex Azazel" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
ai = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]
ai-openai = ["openai>=1.0.0"]
ai-anthropic = ["anthropic>=0.20.0"]


[project.scripts]
bce = "bce.cli:main"
bce-server = "bce.server:run_server"

[tool.hatch.build]
packages = ["bce"]

[tool.hatch.build.targets.wheel]
# Ensure data (JSON corpus) and packaged frontend assets ship with the wheel
force-include = { "bce/data" = "bce/data", "frontend" = "bce/frontend" }
